@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.87">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.88">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -26,8 +26,9 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.87 [20230710]:
-- Used anify for zoro
+Changelog 0.3.88 [20230711]:
+- Permanent Fix for Verizon Firestick/Nvidia Users
+- Changed Nyaa Proxy to Google Proxy
     </news>
   </extension>
 </addon>
