@@ -1,3 +1,7 @@
+Changelog 0.3.88 [20230711]:
+- Permanent Fix for Verizon Firestick/Nvidia Users
+- Changed Nyaa Proxy to Google Proxy
+
 Changelog 0.3.87 [20230710]:
 - Used anify for zoro
 
